--- a/chocoholic.html
+++ b/chocoholic.html
@@ -25,6 +25,17 @@
         the Yucatec Mayan word chokol meaning hot, and the Nahuatl atl meaning water.The Nahuatl term, chicolatl, meaning 
         "beaten drink", may derive from the word for the frothing stick, chicoli. The term "chocolate chip" was first used in
         1940.The term "chocolatier", for a chocolate confection maker, is attested from 1888.
+			Chocolate has become one of the most popular food types and flavors in the world, and a vast number of 
+	foodstuffs involving chocolate have been created, particularly desserts including cakes, pudding, mousse, chocolate 
+	brownies, and chocolate chip cookies. Many candies are filled with or coated with sweetened chocolate, and bars of solid
+	chocolate and candy bars coated in chocolate are eaten as snacks. Gifts of chocolate molded into different shapes (e.g.,
+	eggs, hearts) have become traditional on certain Western holidays, such as Easter and Valentine's Day. Chocolate is also 
+	used in cold and hot beverages such as chocolate milk and hot chocolate and in some alcoholic drinks, such as creme de
+	cacao.
+                      Although cocoa originated in the Americas, recent years have seen African nations assuming a leading role 
+	in producing cocoa. Since the 2000s, Western Africa produces almost two-thirds of the world's cocoa, with Ivory Coast 
+	growing almost half of that. In 2009, the Salvation Army International Development Department stated that child labor 
+	and the human trafficking and slavery of child laborers are used in African cocoa cultivation.
  <a href="/about"></a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
