--- a/chocoholic.html
+++ b/chocoholic.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<p>
+        		<p style="font-size:1.5em; line-space:1.4em;">
 		<h1>Hi Chocoholics!!!</h1>
 			The word "chocolate" entered the English language from Spanish in about 1600.How the word came into Spanish is less
         certain, and there are competing explanations. Perhaps the most cited explanation is that "chocolate" comes from Nahuatl,
