--- a/chocoholic.html
+++ b/chocoholic.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>CHOCOLATE</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body style="color:white;">
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/history">History</a></li>
-        		<li><a href="/facts">Facts</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---    	
+<div class="blurb">
 			
         		<p >
 		<h1>Hi Chocoholics!!!</h1>
@@ -39,9 +27,5 @@
 	and the human trafficking and slavery of child laborers are used in African cocoa cultivation.
  <a href="/about"></a> </p>
     		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		Keep Eating Chocolates!!!
-		</footer>
-	</body>
-</html>
+		
+	
