--- a/_posts/2017-01-14-shweta-yadav-site-launched.html
+++ b/_posts/2017-01-14-shweta-yadav-site-launched.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Shweta Yadav, Chocoholic, Launches Site"
+title: " , Chocoholic, Launches Site"
 date: 2017-01-14
 ---
  Paul Gavarni Woman Chocolate Vendor (1855–57)
