--- a/history/chocoholic.html
+++ b/history/chocoholic.html
@@ -1,11 +1,8 @@
-<html>
-<head>
-<title>
-{{ page.title }}
-</title>
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body><h1>History</h1>
+---
+layout:default
+title: Shweta-yadav
+---
+<h1>History</h1>
   <p>
   Until the 16th century, the drink from the Central and South American peoples was unknown to Europeans.<br/>
 
@@ -38,6 +35,10 @@ years, chocolate established a foothold throughout Europe.<br/>
 
 How the word "chocolate" came into Spanish is not certain. The authority on the Spanish language, the Royal Spanish Academy, 
 derives it from the Nahuatl word "xocolatl" (pronounced [ ʃoˈkolaːtɬ]) made up from the words "xococ" meaning sour or bitter,
-and "atl" meaning water or drink. However, as William Bright noted[15] the word "chocolatl" doesn't occur in central Mexican colonial sources making this an unlikely derivation. Santamaria[16] gives a derivation from the Yucatec Maya word "chokol" meaning hot, and the Nahuatl "atl" meaning water. More recently Dakin and Wichman derive it from another Nahuatl term, "chicolatl" from Eastern Nahuatl meaning "beaten drink".[17] They derive this term from the word for the frothing stick, "chicoli". The word xocoatl means beverage of maize.[18] The words "cacaua atl" mean drink of cacao.[18] The word "xocolatl" does not appear in Molina's dictionary</p>
-  </body>
-</html>
+and "atl" meaning water or drink. However, as William Bright noted the word "chocolatl" doesn't occur in central Mexican
+colonial sources making this an unlikely derivation. Santamaria[16] gives a derivation from the Yucatec Maya word "chokol"
+meaning hot, and the Nahuatl "atl" meaning water. More recently Dakin and Wichman derive it from another Nahuatl
+term, "chicolatl" from Eastern Nahuatl meaning "beaten drink". They derive this term from the word for the frothing stick, 
+"chicoli". The word xocoatl means beverage of maize. The words "cacaua atl" mean drink of cacao. The word "xocolatl"
+does not appear in Molina's dictionary</p>
+
