--- a/chocoholic.html
+++ b/chocoholic.html
@@ -25,7 +25,7 @@ title: Shweta Yadav , Chocoholic
 	in producing cocoa. Since the 2000s, Western Africa produces almost two-thirds of the world's cocoa, with Ivory Coast 
 	growing almost half of that. In 2009, the Salvation Army International Development Department stated that child labor 
 	and the human trafficking and slavery of child laborers are used in African cocoa cultivation.
- <a href="/about"></a> </p>
+ <div id="home_menu"><a href="#"></a></div>  </p>
     		</div><!-- /.blurb -->
 		
 	
