--- a/about/chocoholic.html
+++ b/about/chocoholic.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Shweta Yadav, Chocoholic
+title:  , Chocoholic
 ---
 <h1>About</h1>
 <p>Chocolate is a typically sweet, usually brown food preparation of Theobroma cacao seeds, roasted and ground, and often flavored 
