--- a/about/chocoholic.html
+++ b/about/chocoholic.html
@@ -2,6 +2,12 @@
 layout: default
 title:  , Chocoholic
 ---
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    </head>
+  <body>
 <h1>About</h1>
 <p>Chocolate is a typically sweet, usually brown food preparation of Theobroma cacao seeds, roasted and ground, and often flavored 
 with vanilla. It is made in the form of a liquid, paste, or in a block, or used as a flavoring ingredient in other foods. Cacao has
@@ -19,3 +25,5 @@ chocolate contains cocoa butter, sugar, and milk, but no cocoa solids.
 
 Cocoa solids are a source of flavonoids and alkaloids, such as theobromine, phenethylamine and caffeine. Chocolate also contains
 anandamide.</p>
+  </body>
+</html>
