--- a/history/chocoholic.html
+++ b/history/chocoholic.html
@@ -2,6 +2,13 @@
 layout:default
 title: Shweta-yadav
 ---
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>"History of Chocolates"</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    </head>
+  <body style="color:white;">
 <h1>History</h1>
   <p>
   Until the 16th century, the drink from the Central and South American peoples was unknown to Europeans.<br/>
@@ -41,4 +48,5 @@ meaning hot, and the Nahuatl "atl" meaning water. More recently Dakin and Wichma
 term, "chicolatl" from Eastern Nahuatl meaning "beaten drink". They derive this term from the word for the frothing stick, 
 "chicoli". The word xocoatl means beverage of maize. The words "cacaua atl" mean drink of cacao. The word "xocolatl"
 does not appear in Molina's dictionary</p>
-
+</body>
+  </html>
