--- a/history/chocoholic.html
+++ b/history/chocoholic.html
@@ -1,6 +1,6 @@
 ---
 layout:default
-title: Shweta-yadav
+title: Shweta yadav, Chocoholic
 ---
 <!DOCTYPE html>
 <html>
@@ -9,6 +9,16 @@ title: Shweta-yadav
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
   <body style="color:white;">
+    <nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/history">History</a></li>
+        		<li><a href="/facts">Facts</a></li>
+			<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		
 <h1>History</h1>
   <p>
   Until the 16th century, the drink from the Central and South American peoples was unknown to Europeans.<br/>
