--- a/history/chocoholic.html
+++ b/history/chocoholic.html
@@ -9,13 +9,13 @@ title: Shweta yadav, Chocoholic
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
   <body style="color:white;">
-    <nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/history">History</a></li>
-        		<li><a href="/facts">Facts</a></li>
-			<li><a href="/blog">Blog</a></li>
+		<nav>
+    		<ul><br/>
+        		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
+	        	<li><a href="https://shweta-yadav.github.io/about/chocoholic.html" >About</a></li>
+        		<li><a href="https://shweta-yadav.github.io/history/chocoholic.html" >History</a></li>
+        		<li><a href="https://shweta-yadav.github.io/facts/chocoholic.html">Facts</a></li>
+			<li><a href="https://shweta-yadav.github.io/blog/chocoholic.html" > Blog </a></li>
     		</ul>
 		</nav>
 		
