--- a/chocoholic.html
+++ b/chocoholic.html
@@ -4,7 +4,7 @@ title: Shweta Yadav , Chocoholic
 ---    	
 <div class="blurb">
 			
-        		<p style="text-size:2em; text-color:grey;">
+        		<p>
 		<h1>Hi Chocoholics!!!</h1>
 			The word "chocolate" entered the English language from Spanish in about 1600.How the word came into Spanish is less
         certain, and there are competing explanations. Perhaps the most cited explanation is that "chocolate" comes from Nahuatl,
@@ -14,17 +14,23 @@ title: Shweta Yadav , Chocoholic
         the Yucatec Mayan word chokol meaning hot, and the Nahuatl atl meaning water.The Nahuatl term, chicolatl, meaning 
         "beaten drink", may derive from the word for the frothing stick, chicoli. The term "chocolate chip" was first used in
         1940.The term "chocolatier", for a chocolate confection maker, is attested from 1888.
-			Chocolate has become one of the most popular food types and flavors in the world, and a vast number of 
+			<br/><br/>Chocolate has become one of the most popular food types and flavors in the world, and a vast number of 
 	foodstuffs involving chocolate have been created, particularly desserts including cakes, pudding, mousse, chocolate 
 	brownies, and chocolate chip cookies. Many candies are filled with or coated with sweetened chocolate, and bars of solid
 	chocolate and candy bars coated in chocolate are eaten as snacks. Gifts of chocolate molded into different shapes (e.g.,
 	eggs, hearts) have become traditional on certain Western holidays, such as Easter and Valentine's Day. Chocolate is also 
 	used in cold and hot beverages such as chocolate milk and hot chocolate and in some alcoholic drinks, such as creme de
-	cacao.
-                      Although cocoa originated in the Americas, recent years have seen African nations assuming a leading role 
+	cacao.<br/>
+                      <br/>Although cocoa originated in the Americas, recent years have seen African nations assuming a leading role 
 	in producing cocoa. Since the 2000s, Western Africa produces almost two-thirds of the world's cocoa, with Ivory Coast 
 	growing almost half of that. In 2009, the Salvation Army International Development Department stated that child labor 
 	and the human trafficking and slavery of child laborers are used in African cocoa cultivation.
+	          <br/>   <br/> Roughly two-thirds of the world's cocoa is produced in Western Africa, with close to half of the total sourced from Côte
+	d'Ivoire. Like many food industry producers, individual cocoa farmers are at the mercy of volatile world markets. The price can vary from between £500 ($945) and £3,000 ($5,672) per ton in the space of just a few years.[citation needed] While investors trading in cocoa can dump shares at will, individual cocoa farmers can not ramp up production and abandon trees at anywhere near that pace.
+
+Only three to four per cent of "cocoa futures" contracts traded in the cocoa markets ever end up in the physical delivery of cocoa. Every year seven to nine times more cocoa is bought and sold on the exchange than exists.
+
+It has been alleged that an estimated 90% of cocoa farms in Côte d'Ivoire have used some form of slave labor in order to remain viable.[21] When cocoa prices drop, farmers in West Africa sometimes cut costs by resorting to slave labour
  <div id="home_menu"><a href="#"></a></div>  </p>
     		</div><!-- /.blurb -->
 		
