--- a/about/chocoholic.html
+++ b/about/chocoholic.html
@@ -7,7 +7,7 @@ title: Shweta Yadav , Chocoholic
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
-  <body style="color:white;">
+  <body style="color:black;">
 <h1>About</h1>
 <p>Chocolate is a typically sweet, usually brown food preparation of Theobroma cacao seeds, roasted and ground, and often flavored 
 with vanilla. It is made in the form of a liquid, paste, or in a block, or used as a flavoring ingredient in other foods. Cacao has
