--- a/chocoholic.html
+++ b/chocoholic.html
@@ -1,8 +1,13 @@
 ---
 layout: default
 title: Shweta Yadav , Chocoholic
----    	
-<div class="blurb">
+---
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+       </head>
+       <body>
+	<div class="blurb">
 			
         		<p>
 		<h1>Hi Chocoholics!!!</h1>
@@ -31,7 +36,7 @@ title: Shweta Yadav , Chocoholic
 Only three to four per cent of "cocoa futures" contracts traded in the cocoa markets ever end up in the physical delivery of cocoa. Every year seven to nine times more cocoa is bought and sold on the exchange than exists.
 
 It has been alleged that an estimated 90% of cocoa farms in Côte d'Ivoire have used some form of slave labor in order to remain viable.[21] When cocoa prices drop, farmers in West Africa sometimes cut costs by resorting to slave labour
- <div id="home_menu"><a href="#"></a></div>  </p>
-    		</div><!-- /.blurb -->
+ <div id="home_menu"><a href="#"></a></div> </p>
+    		<!-- /.blurb --></body></html>
 		
 	
