--- a/chocoholic.html
+++ b/chocoholic.html
@@ -1,15 +1,14 @@
+
 ---
 layout: default
 title: Shweta Yadav , Chocoholic
 ---
+<!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-       </head>
-       <body>
-	<div class="blurb">
-			
-        		<p>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    </head>
+<body style="color:black;">
 		<h1>Hi Chocoholics!!!</h1>
 			The word "chocolate" entered the English language from Spanish in about 1600.How the word came into Spanish is less
         certain, and there are competing explanations. Perhaps the most cited explanation is that "chocolate" comes from Nahuatl,
@@ -36,7 +35,7 @@ title: Shweta Yadav , Chocoholic
 Only three to four per cent of "cocoa futures" contracts traded in the cocoa markets ever end up in the physical delivery of cocoa. Every year seven to nine times more cocoa is bought and sold on the exchange than exists.
 
 It has been alleged that an estimated 90% of cocoa farms in Côte d'Ivoire have used some form of slave labor in order to remain viable.[21] When cocoa prices drop, farmers in West Africa sometimes cut costs by resorting to slave labour
- <div id="home_menu"><a href="#"></a></div> </p></div>
+ <div id="home_menu"><a href="#"></a></div> 
     		<!-- /.blurb --></body></html>
 		
 	
