--- a/chocoholic.html
+++ b/chocoholic.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
 ---
 layout: default
 title: Shweta Yadav , Chocoholic
 ---
+<!DOCTYPE html>
+
+<html>
+  <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
 <body style="color:black;">
 		<h1>Hi Chocoholics!!!</h1>
+	<p>
 			The word "chocolate" entered the English language from Spanish in about 1600.How the word came into Spanish is less
         certain, and there are competing explanations. Perhaps the most cited explanation is that "chocolate" comes from Nahuatl,
         the language of the Aztecs, from the word chocolātl, which, according to most sources, was derived from xocolātl
@@ -29,13 +30,17 @@ title: Shweta Yadav , Chocoholic
 	in producing cocoa. Since the 2000s, Western Africa produces almost two-thirds of the world's cocoa, with Ivory Coast 
 	growing almost half of that. In 2009, the Salvation Army International Development Department stated that child labor 
 	and the human trafficking and slavery of child laborers are used in African cocoa cultivation.
-	          <br/>   <br/> Roughly two-thirds of the world's cocoa is produced in Western Africa, with close to half of the total sourced from Côte
-	d'Ivoire. Like many food industry producers, individual cocoa farmers are at the mercy of volatile world markets. The price can vary from between £500 ($945) and £3,000 ($5,672) per ton in the space of just a few years.[citation needed] While investors trading in cocoa can dump shares at will, individual cocoa farmers can not ramp up production and abandon trees at anywhere near that pace.
-
-Only three to four per cent of "cocoa futures" contracts traded in the cocoa markets ever end up in the physical delivery of cocoa. Every year seven to nine times more cocoa is bought and sold on the exchange than exists.
-
-It has been alleged that an estimated 90% of cocoa farms in Côte d'Ivoire have used some form of slave labor in order to remain viable.[21] When cocoa prices drop, farmers in West Africa sometimes cut costs by resorting to slave labour
- <div id="home_menu"><a href="#"></a></div> 
+	          <br/>   <br/> Roughly two-thirds of the world's cocoa is produced in Western Africa, with close to half of the
+		total sourced from Côte	d'Ivoire. Like many food industry producers, individual cocoa farmers are at the mercy of
+		
+		volatile world markets. The price can vary from between £500 ($945) and £3,000 ($5,672) per ton in the space of
+		just a few years.[citation needed] While investors trading in cocoa can dump shares at will, individual cocoa
+		farmers can not ramp up production and abandon trees at anywhere near that pace.
+		Only three to four per cent of "cocoa futures" contracts traded in the cocoa markets ever end up in the physical delivery of
+		cocoa. Every year seven to nine times more cocoa is bought and sold on the exchange than exists.It has been
+		alleged that an estimated 90% of cocoa farms in Côte d'Ivoire have used some form of slave labor in order to
+		remain viable. When cocoa prices drop, farmers in West Africa sometimes cut costs by resorting to slave labour
+       <div id="home_menu"><a href="#"></a></div> </p>
     		<!-- /.blurb --></body></html>
 		
 	
