--- a/facts/chocoholic.html
+++ b/facts/chocoholic.html
@@ -1,15 +1,16 @@
 ---
-layout:default
-title: Shweta Yadav's , Chocoholic
+layout: default
+title:   , Chocoholic
 ---
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body>
-  <h1> Yummy Facts!!</h1>
-  <p>
-  <ul>
+    </head>
+  <body style="color:black;">
+<h1>Yummy Facts!!</h1>
+    <p>
+      <ul>
   <li>
   1. There is a correlation between the amount of chocolate a country consumes on average and the number of Nobel Laureates that country has produced.
 </li><li>
@@ -34,5 +35,7 @@ title: Shweta Yadav's , Chocoholic
 10.The film Willy Wonka and the Chocolate Factory was financed by Quaker Oats to promote its new Wonka Bar candy. This is also why the film is called “Willy Wonka and the Chocolate Factory” instead of “Charlie and the Chocolate Factory” like the book it’s based on.
   </li>
   </ul>
-  </p>
-  </body></html>
+  
+      </p>
+    </body>
+  </html>
