--- a/facts/chocoholic.html
+++ b/facts/chocoholic.html
@@ -7,7 +7,7 @@ title:   , Chocoholic
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
-  <body style="color:black;">
+  <body>
 <h1>Yummy Facts!!</h1>
     <p>
       <ul>
