--- a/facts/chocoholic.html
+++ b/facts/chocoholic.html
@@ -9,7 +9,7 @@ title:   , Chocoholic
     </head>
   <body>
 <h1>Yummy Facts!!</h1>
-    <p>
+    <p style="text-size:2em; color:grey;">
       <ul>
   <li>
   1. There is a correlation between the amount of chocolate a country consumes on average and the number of Nobel Laureates that country has produced.
