--- a/facts/chocoholic.html
+++ b/facts/chocoholic.html
@@ -8,6 +8,15 @@ title:   , Chocoholic
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
   <body>
+    <nav>
+    		<ul><br/>
+        		<li><a href="https://shweta-yadav.github.io/chocoholic.html">Home</a></li>
+	        	<li><a href="https://shweta-yadav.github.io/about/chocoholic.html" >About</a></li>
+        		<li><a href="https://shweta-yadav.github.io/history/chocoholic.html" >History</a></li>
+        		<li><a href="https://shweta-yadav.github.io/facts/chocoholic.html">Facts</a></li>
+			<li><a href="https://shweta-yadav.github.io/blog/chocoholic.html" > Blog </a></li>
+    		</ul>
+</nav>
 <h1>Yummy Facts!!</h1>
     <p style="text-size:2em; color:grey;">
       <ul>
